k8s/jaxstats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaxstats
  labels:
    app: jaxstats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaxstats
  template:
    metadata:
      labels:
        app: jaxstats
    spec:
      containers:
        - name: jaxstats
          image: jaxstats:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
