k8s/jaxstats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaxstats
spec:
  selector:
    app: jaxstats
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
