k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corium
  namespace: corium-workloads
  labels:
    app: corium
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: corium
