k8s/jaxstats-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaxstats-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jaxstats.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jaxstats
            port:
              number: 8000
